# SwiftMini

./: CMakeLists.txt  Makefile  main.cpp  test.swiftMini
SwiftMini/: main.cpp
SwiftMini.xcodeproj/: project.pbxproj
SwiftMini.xcodeproj/xcuserdata/kamil.xcuserdatad/xcschemes/: xcschememanagement.plist
SwiftMini/src/include/Parse/: Lexer.h  Token.h  Tokens.def
SwiftMini/src/lib/Parse/: Lexer.cpp
src/include/Parse/: Lexer.h  Token.h  Tokens.def
src/lib/AST/: CMakeLists.txt
src/lib/Parse/: CMakeLists.txt  Lexer.cpp
src/lib/Sema/: CMakeLists.txt
tests/: test_lexer.cpp
